# wechat-mp-auto

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  _meta.json  batch_generate.py  generate_articles.py  metadata.json  openclaw_install_article.py  openclaw_tutorial.py  pyproject.toml  requirements.txt  test_all.py  test_conversion.py  test_debug_draft.py  test_e2e.py  test_final.py  test_full.py  test_full_fix.py  test_real_publish.py  test_real_publish_v2.py  test_simple.py  test_skill.py
.clawhub/: origin.json
.github/workflows/: check-version.yml
scripts/: bump_version.py
src/: __init__.py  config.py  exceptions.py  first_time_setup.py  publish.py  token_manager.py
src/formatters/: __init__.py
src/skills/: advanced_components.py  analytics_skill.py  article_writer.py  base_skill.py  comment_skill.py  content_optimizer.py  content_reviewer.py  draft_skill.py  html_optimizer.py  image_generator.py  image_processor.py  material_skill.py  message_skill.py  publish_skill.py  template_design.py  template_skill.py  template_sync.py  topic_research.py  user_skill.py
src/utils/: __init__.py  logger.py  validators.py
themes/: cuiyu.yaml  default.yaml  houge.yaml  macaron.yaml  shuimo.yaml  wenyan.yaml
themes/geek/: default.yaml
themes/macaron/: blue.yaml  coral.yaml  cream.yaml  default.yaml  lavender.yaml  lemon.yaml  lilac.yaml  mint.yaml  peach.yaml  pink.yaml  rose.yaml  sage.yaml  sky.yaml
themes/magazine/: default.yaml
themes/product/: cuiyu.yaml  default.yaml  houge.yaml
themes/shuimo/: default.yaml
themes/wenyan/: default.yaml  lapis.yaml  (+6 more)
